...
    <string name="help">Help</string>

    <string name="discard">Discard</string>

    <string name="next">Next</string>

    <string name="ok">OK</string>
    <string name="done">Done</string>
    <string name="close">Close</string>

    <string name= "assistant">Assistant</string>

    <string name="yes">Yes</string>
...
    <string name="name_consists_of_spaces_only">You only put spaces into the text field, please enter a text
        using letters, numbers or other special characters.</string>
    <string name="name_empty">Please enter a text</string>

    <!-- Recycler View -->
    <string name="am_empty_list">There are no items in this list yet. Please add some first.</string>
    <string name="reject_import">The actor or object could not be added.</string>
    <string name="am_merge_error">No merging is done. Exactly 2 projects need to be selected to merge.</string>
    <string name="am_backpack">Pack</string>
    <string name="am_unpack">Unpack</string>
    <string name="am_copy">Copy</string>
    <string name="am_delete">Delete</string>
    <string name="am_rename">Rename</string>
...
    <string name="am_merge">Merge</string>
    <string name="am_import">Import</string>
    <string name="dialog_confirm_delete">You can\'t undo this!</string>
    <string name="list_headline_sprites">Actors and objects</string>

    <!-- Options Menu Options -->
    <string name="backpack">Backpack</string>
    <string name="copy">Copy</string>
    <string name="delete">Delete</string>
    <string name="rename">Rename</string>
    <string name="merge">Merge</string>
    <string name="show_details">Show details</string>
    <string name="hide_details">Hide details</string>
    <string name="project_options">Project options</string>
    <string name="from_library">Add from library</string>
    <string name="from_local">Add from local</string>
...
    <string name="Image_format_not_supported">Image format not supported</string>
    <string name="import_conflicting_variables">The actor or object could not be added.</string>
    <string name="import_conflicting_variables_reason">The reason is that the following variable or
        list names are in conflict because they are used for
        all actors and objects and with the same name also for only one of the actors or objects: </string>
    <string name="import_conflicting_variables_try_again">Please rename one of these variables or lists and try again.</string>
    <string name="import_unresolvable_project_name_reason">The reason is that the project
        from which you are trying to import has an unresolvable name.</string>
    <string name="import_unresolvable_project_name_try_again">Please rename the project and try
        again. Try to remove . in project names.</string>

    <!-- Details -->
    <string name="project_details">Last access: %s, size: %s</string>
...
    <string name="sound_details">Duration: %s, size: %s</string>
    <!--  -->

    <!-- Rename Dialog Titles -->
    <string name="rename_project">Rename project</string>
    <string name="rename_scene_dialog">Rename scene</string>
    <string name="rename_sprite_dialog">Rename actor or object</string>
    <string name="rename_look_dialog">Rename look</string>
    <string name="rename_sound_dialog">Rename sound</string>
    <string name="rename_nfctag_dialog">Rename NFC tag</string>
    <string name="rename_data_dialog">Rename</string>

    <!-- New Script Group Dialog -->
...

    <!-- ScriptListFragment -->
    <string name="fragment_script_text_description">Tap \"+\" to add scripts</string>
    <!--  -->

    <!-- SpriteListFragment -->
    <string name="fragment_sprite_text_description">Tap \"+\" to add actors or objects</string>
    <string name="default_sprite_name">My actor or object</string>
    <!--  -->

    <!-- LookListFragment -->
    <string name="fragment_look_text_description">Tap \"+\" to add looks</string>
    <string name="select_look_from_gallery">Select image</string>
...
    <string name="new_data_for_connected_devices">For all actors, objects, and clones in all scenes of projects
        on connected multiplayer devices</string>


    <!-- Backpack -->
    <string name="backpack_title">Your backpack</string>
    <string name="pack">Pack</string>
    <string name="unpack">Unpack</string>
    <!--  -->

    <!-- NewProjectDialog -->
    <string name="new_project_dialog_example_project">Example project</string>
    <!--  -->
...
